--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="jp">
+<!doctype html>
+<html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>yonasuii</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>pdread {{ title }}</title>
 </head>
 
 <body>
-  <h3 style="margin-left:8em">今月の阿仁川（米内沢）水位</h3>
-  <img src="data:image/png;base64,{{ img }}" />
+  <h1>Hello {{ title }}</h1>
+  <p>{{ framework }}でHTMLファイルを読み込みことに成功しました。</p>
 </body>
 
 </html>
